0.4.0:
* Manual (wiki) added to the website (2006-12-24)
* Win32Forth config.fs/make.fs added
* config: new word <=> for comparing numbers (2006-12-12)
* chs: new words chs-set-string,chs-reset-string (2006-12-11)
* Comment cleanup (2006-12-10)
* tmr: new module (Timer) (2006-12-8)
* crc: word scr-free renamed to crc-free (bug)
* crc: word crc-start renamed to crc-reset
* sh1: new module (Secure Hash 1) (2006-12-04)
* trm: new module (Terminal escape sequences outputter) (2006-11-17)
* bci: new module (Binary cell tree iterator) (2006-10-03)
* bct: new module (Binary cell tree) (2006-10-03)
* bcn: new module (Binary cell tree node) (2006-10-03)
* act: new module (AVL cell binary tree) (2006-09-24)
* acn: new module (AVL cell tree node) (2006-09-23)
* rng: new module (Pseudo Random Number Generator) (2006-09-15)
* tst: partly rewritten: reporting more info; no change in interface (2006-09-12)
* config: new words ftuck, fnip, f2dup, f-rot, 0e0, 1e0, 2e0 (2006-09-11)
* config: new words: f>r fr> fr@ (2006-08-30)  
* config: sys.cells-in-float added (2006-08-30)
* cpx: new module (Complex number) (2006-08-28)
* examples directory added (2006-08-28)
* frc: new module (Fraction) (2006-08-26)
0.3.0:
* config: sys.bits-in-byte added
* config: sys.bits-in-cell added
* config: sys.bits-in-char added
* chs: new module (Character Set)
* crc: word crc-calc-crc32 renamed to crc+calc-crc32
* crc: word crc-calc-poly renamed to crc+calc-poly
* config: sys.bigendian added
* md5: new module (MD5 Algorithm)
* hci: new module (Hash cell table iterator)
* hcn: new module (Hash cell table node)
* hct: new module (Hash cell table)
* float words optional
* pfe config.fs/make.fs added
* dti: new module (Date & Time iterator)
* dtm: new module (Date & Time)
0.2.0
* car: new module (Cell array)
* bar: new module (Bit array)
* tst: new words: ?d and ?ud for tests on doubles
* chr: new word: chr-string?
* chr: new word: chr-base
* tos: new module (Text output stream)